src/test/ui/feature-gates/feature-gate-custom_test_frameworks.stderr
error[E0658]: custom test frameworks are an unstable feature
  --> $DIR/feature-gate-custom_test_frameworks.rs:1:1
   |
LL | #![test_runner(main)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see tracking issue #50297
   = help: add #![feature(custom_test_frameworks)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
